<resources>
    <string name="app_name">Weather Converter</string>
    <string name="temperature_converter">Temperature Converter</string>
    <string name="enter_temperature_in_celsius">Enter temperature in Celsius</string>
    <string name="enter_temperature_in_fahrenheit">Enter temperature in Fahrenheit</string>
    <string name="convert">Convert</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
</resources>